# across-relayer-monitoring

./: .env.example  .gitignore  README.md  capital_config.example.yaml  config.py  cron_relayer_monitoring.sh  db_utils.py  discover_routes.py  init_db.py  main.py  pyproject.toml  requirements.txt  schema.md  tox.ini
src/: calculate_daily_profits.py  collect_fills.py  config.py  db_utils.py  discover_routes.py  enrich_fills.py  init_db.py  process_bundles.py  process_repayments.py  process_returns.py  reporting_utils.py  update_token_prices.py  upload_utils.py  web3_utils.py
src/abi/: spoke_abi.json
tests/: test_discover_routes.py  test_init_db.py
